Project

General

Profile

Actions

Bug #22920

closed

filestore journal replay does not guard omap operations

Added by Sage Weil about 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

omap operations are replayed without checking the guards, which means that omap data can leak between objects that are cloned.


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #22934: luminous: filestore journal replay does not guard omap operationsResolvedVictor DenisovActions
Actions #1

Updated by Sage Weil about 6 years ago

  • Backport set to luminous,jewel
Actions #2

Updated by Sage Weil about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from luminous,jewel to luminous
Actions #3

Updated by Sage Weil about 6 years ago

  • Priority changed from Immediate to High

lowering the priority since in practice we don't clone objects with omap on them.

Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22934: luminous: filestore journal replay does not guard omap operations added
Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF